--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lodash": "^4.17.20",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
