--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-firebase/auth": "^0.2.10",
     "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "firebase": "^8.2.9",
     "lodash": "^4.17.20",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
