--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^8.2.9",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "msw": "^0.26.2",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
